[package]
name = "database_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
dotenvy = "0.15"
# sqlx = { version = "0.7.0-alpha.2", features = [ "sqlite", "runtime-tokio", "tls-native" ]}
sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "main", features =  [ "sqlite", "runtime-tokio", "tls-native-tls"  ] }
tokio = { version = "1.27.0", features = [ "full" ] }
tui = { package = "ratatui" }
