[package]
name = "db_viewy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
dotenvy = "0.15"
sea-orm = { version = "0.11", features = [ "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls" ] }
tokio = { version = "1.27.0", features = [ "full" ] }
tui = { package = "ratatui" }
